# F1-Telemetry-Time

./: .gitignore  CLAUDE.md  DEPLOY.md  DESIGN.md  README.md  RESUMEN.md  start-online-cloudflare.bat  start-online.bat
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/live/: auth.py  feeds.py  manager.py  timing.py
backend/app/models/: schemas.py
backend/app/routers/: api.py  live.py
backend/app/services/: f1_data.py
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BackendConfig.tsx  CompareChart.tsx  DriverHeader.tsx  ErrorBoundary.tsx  LapsTable.tsx  MicroSectorGrid.tsx  ProgressBar.tsx  Select.tsx  TelemetryChart.tsx  TrackMap.tsx  TyreStrategy.tsx  WeatherPanel.tsx  icons.tsx  tyres.ts
frontend/src/live/: DriverDetail.tsx  LiveDirect.tsx  LivePanel.tsx  LiveTiming.tsx  LiveTrackMap.tsx  RaceControl.tsx  ReplayPlayer.tsx  gridOrder.ts  towerAnim.ts  useLiveFeed.ts
frontend/src/types/: api.ts
